<resources>
    <string name="app_name">ZsmsApp</string>
    <string name="login_title">添加或注册账号</string>
    <string name="inputusername">输入您的账号</string>
    <string name="inputnickname">输入您的昵称</string>
    <string name="inputpassword">输入您的密码</string>
    <string name="inputidnum">输入您的身份证号码</string>
    <string name="inputpasswordagin">再次输入您的密码</string>
    <string name="register">注册账号</string>
    <string name="register_title">注册账号</string>

</resources>
