<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/colorTopic">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登陆账号"
            android:textColor="@android:color/white" />



    </RelativeLayout>


    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:maxLines="1"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:background="@android:color/transparent"
        android:hint="@string/inputusername"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#CD919E"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="8sp"
        android:background="#CD919E" />

    <EditText
        android:id="@+id/edPassWord"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/inputpassword"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#CD919E"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/bg_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登陆" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="8sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_marginRight="5sp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@android:color/holo_blue_dark" />
    </RelativeLayout>
</LinearLayout>
